css/style.css
html, body {
  overflow-x: hidden;
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}
body {
  font-family: 'Raleway',sans-serif;
  font-size: 30px;
  color: #2f2c3e;
  text-align: center;
  background-color: #faffe5;
  /*TODO: parallax*/
  /*perspective: 1px;*/
}

::selection {
  background-color: #a8dba8;
}

a, a:hover, a:active {
  text-decoration: none;
  outline: none;
  color: inherit;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0 auto;
  max-width: 235px;
}

li {
  margin: 15px 0;
}

li a {
  width: 100%;
  display: inline-block;
}

@media (min-width: 767px) {
  ul:not(.list-vertical) {
    display: flex;
    justify-content: center;
    max-width: none;
  }
  li {
    margin: 0 7px;
  }
  ul.list-vertical li {
    margin: 7px 0;
  }
}

.button {
  background: #cff09e;
  padding: 3px;
  border-bottom: 5px solid rgba(0,0,0,.3);
  margin-top: 35px;
  position: relative;
}

.button.button-flat {
  background: transparent;
  border-bottom-color: #abe545;
}

@media (min-width: 767px) {
  .button:not(.button-flat) {
    transform: skew(-30deg);
    transition: transform .2s;
  }

  .button:not(.button-flat) > a {
    display: inline-block;
    transform: skew(30deg);
  }

  .button:hover, .button:hover a {
    border-bottom-color: rgba(0,0,0,.7);
  }

  .button:hover:after {
    content: attr(data-hover);
    display: inline-block;
    position: absolute;
    top: 5px;
    left: 105%;
    transform: skew(30deg);
    width: 200px;
    font-size: 17px;
    color: rgba(0,0,0,.7);
  }
}

.m-0 {
  margin: 0;
}

.mt-auto {
  margin-top: auto;
}

.inline-block {
  display: inline-block;
}

small {
  color: rgba(0,0,0,.6);
  font-style: italic;
  font-size: 17px;
}

h1 {
  font-size: 50px;
  font-weight: normal;
  margin-top: 70px;
}

h2 + small {
  display: inline-block;
  margin: -45px 0 0 0;
}

@media (min-width: 767px) {
  h2 + small {
    margin: -45px 0 0 177px;
  }
}

.logo-container {
  height: 125px;
  width: 125px;
  border-radius: 50%;
  position: relative;
  -webkit-transition: box-shadow .2s;
  transition: box-shadow .2s;
  margin: 0 auto;
  z-index: 5;
}

.logo-container img {
  height: 125px;
  width: 125px;
  border: 0;
}

.logo-container:after {
  top: 0;
  left: 0;
  padding: 0;
  box-shadow: 0 0 0 8px white;
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  content: '';

  -webkit-transition: -webkit-transform .7s, opacity .2s, box-shadow .3s, -webkit-filter .7s;
  -moz-transition: -moz-transform .7s, opacity .2s, box-shadow .2s;
  transition: transform .7s, opacity .2s, box-shadow .2s, filter .7s;
}

.logo-container:hover {
  box-shadow: 0 0 0 8px#353F38;
}

.logo-container:hover:after {
  -webkit-transform: scale(1.11);
  -moz-transform: scale(1.07);
  -ms-transform: scale(1.07);
  transform: scale(1.11);
  box-shadow: 0 0 0 110px #F3EFE6;
  opacity: .5;
}

@media (min-width: 767px) {
  .logo-header {
    position: fixed;
    top: 38px;
    right: 38px;
  }
}

.hand-writting {
  font-family: 'Jenna Sue', 'Raleway', sans-serif;
}

section {
  padding: 0 10%;
  margin-top: 40px;
  position: relative;
}

.img-plant {
  display: none;
}

@media (min-width: 767px) {
  .img-plant {
    display: block;
    position: absolute;
    pointer-events: none;
    z-index: 10;
  }

  .img-plant-left {
    background: url(../img/leaf-left.png) no-repeat;
    width: 305px;
    height: 431px;
    left: -305px;
    top: 50%;
    animation: 0.4s ease-out 0s 1 slideInFromLeft forwards;
    /*TODO: parallax*/
    /* transform: translateZ(.4px) scale(0.6); */
  }

  .img-plant-right {
    background: url(../img/leaf-right.png) right no-repeat;
    width: 237px;
    height: 250px;
    right: -90px;
    top: 0;
    /*TODO: parallax*/
    /* transform: translateZ(-0.2px) scale(1.2); */
  }
}

@media (min-width: 1023px) {
  .img-plant-right {
    right: 0;
  }
}

@media (min-width: 767px) {
  section {
    margin-top: 100px;
  }
}

.intro-card {
  max-width: 398px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  background: white;
  text-align: left;
  box-shadow: 0 0 13px 0 #353F38;
  border-radius: 11px;
  overflow: hidden;
  transition: box-shadow .2s, transform .2s;
}

@media (min-width: 767px) {
  .intro-card {
    /* max-width: 780px; */
    animation: .4s ease-out .6s 1 maxWidthIncrease forwards;
    height: 398px;
    flex-direction: row;
    font-size: 35px;
  }
}

@keyframes maxWidthIncrease {
  0% {
    max-width: 398px;
  }
  100% {
    max-width: 780px;
  }
}

@keyframes slideInFromLeft {
  0% {
    left: -305px;
    transform: rotate(20deg) translateY(250px);
  }
  100% {
    left: 0;
    transform: rotate(0) translateY(0);
  }
}

.intro-card:hover {
  box-shadow: 0 0 23px 0 #353F38;
  transform: scale(1.005);
}

.intro-card-text {
  word-break: break-word;
  padding-left: 20px;
  overflow-x: hidden;
}

.intro-card-picture {
  display: flex;
  justify-content: center;
}

@media (min-width: 767px) {
  .intro-card-text {
    height: 100%;
    overflow: auto;
    display: flex;
    flex-direction: column;
  }

  .intro-card-picture {
    display: block;
  }
}

.intro-links {
  margin: 40px 0 50px;
}

.signature {
  font-size: 55px;
  margin: 100px 0 50px;
  color: rgba(0,0,0,.4);
}
/* ... */

